--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "helmet": "^8.0.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "mongodb": "^6.15.0",
